--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "@xyflow/react": "^12.5.1",
     "antd": "^5.24.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
